--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
+REACT_APP_CANDY_MACHINE_ID=6zZRpjPH2EUGnaMJuzNfzgh7VPhFe
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://solana-mainnet.phantom.tech
 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
